@@ -18,17 +18,17 @@
  *      code distribution. The list can also be seen at the
  *      following World Wide Web location:
  *      http://sources.redhat.com/pthreads-win32/contributors.html
- * 
+ *
  *      This library is free software; you can redistribute it and/or
  *      modify it under the terms of the GNU Lesser General Public
  *      License as published by the Free Software Foundation; either
  *      version 2 of the License, or (at your option) any later version.
- * 
+ *
  *      This library is distributed in the hope that it will be useful,
  *      but WITHOUT ANY WARRANTY; without even the implied warranty of
  *      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  *      Lesser General Public License for more details.
- * 
+ *
  *      You should have received a copy of the GNU Lesser General Public
  *      License along with this library in the file COPYING.LIB;
  *      if not, write to the Free Software Foundation, Inc.,
@@ -41,7 +41,7 @@
  * MCS locks are queue-based locks, where the queue nodes are local to the
  * thread. The 'lock' is nothing more than a global pointer that points to
  * the last node in the queue, or is NULL if the queue is empty.
- * 
+ *
  * Originally designed for use as spin locks requiring no kernel resources
  * for synchronisation or blocking, the implementation below has adapted
  * the MCS spin lock for use as a general mutex that will suspend threads
@@ -64,7 +64,7 @@
  *   every lock held concurrently by a thread.
  *
  * E.g.:
- * 
+ *
  * ptw32_mcs_lock_t lock1 = 0;
  * ptw32_mcs_lock_t lock2 = 0;
  *
@@ -100,11 +100,11 @@
 
 /*
  * ptw32_mcs_flag_set -- notify another thread about an event.
- * 
+ *
  * Set event if an event handle has been stored in the flag, and
  * set flag to -1 otherwise. Note that -1 cannot be a valid handle value.
  */
-INLINE void 
+INLINE void
 ptw32_mcs_flag_set (HANDLE * flag)
 {
   HANDLE e = (HANDLE)(PTW32_INTERLOCKED_SIZE)PTW32_INTERLOCKED_COMPARE_EXCHANGE_SIZE(
@@ -120,11 +120,11 @@ ptw32_mcs_flag_set (HANDLE * flag)
 
 /*
  * ptw32_mcs_flag_wait -- wait for notification from another.
- * 
+ *
  * Store an event handle in the flag and wait on it if the flag has not been
  * set, and proceed without creating an event otherwise.
  */
-INLINE void 
+INLINE void
 ptw32_mcs_flag_wait (HANDLE * flag)
 {
   if ((PTW32_INTERLOCKED_SIZE)0 ==
@@ -150,25 +150,25 @@ ptw32_mcs_flag_wait (HANDLE * flag)
 
 /*
  * ptw32_mcs_lock_acquire -- acquire an MCS lock.
- * 
- * See: 
+ *
+ * See:
  * J. M. Mellor-Crummey and M. L. Scott.
  * Algorithms for Scalable Synchronization on Shared-Memory Multiprocessors.
  * ACM Transactions on Computer Systems, 9(1):21-65, Feb. 1991.
  */
 #if defined(PTW32_BUILD_INLINED)
-INLINE 
+INLINE
 #endif /* PTW32_BUILD_INLINED */
-void 
+void
 ptw32_mcs_lock_acquire (ptw32_mcs_lock_t * lock, ptw32_mcs_local_node_t * node)
 {
   ptw32_mcs_local_node_t  *pred;
-  
+
   node->lock = lock;
   node->nextFlag = 0;
   node->readyFlag = 0;
   node->next = 0; /* initially, no successor */
-  
+
   /* queue for the lock */
   pred = (ptw32_mcs_local_node_t *)PTW32_INTERLOCKED_EXCHANGE_PTR((PTW32_INTERLOCKED_PVOID_PTR)lock,
 								  (PTW32_INTERLOCKED_PVOID)node);
@@ -184,16 +184,16 @@ ptw32_mcs_lock_acquire (ptw32_mcs_lock_t * lock, ptw32_mcs_local_node_t * node)
 
 /*
  * ptw32_mcs_lock_release -- release an MCS lock.
- * 
- * See: 
+ *
+ * See:
  * J. M. Mellor-Crummey and M. L. Scott.
  * Algorithms for Scalable Synchronization on Shared-Memory Multiprocessors.
  * ACM Transactions on Computer Systems, 9(1):21-65, Feb. 1991.
  */
 #if defined(PTW32_BUILD_INLINED)
-INLINE 
+INLINE
 #endif /* PTW32_BUILD_INLINED */
-void 
+void
 ptw32_mcs_lock_release (ptw32_mcs_local_node_t * node)
 {
   ptw32_mcs_lock_t *lock = node->lock;
@@ -213,7 +213,7 @@ ptw32_mcs_lock_release (ptw32_mcs_local_node_t * node)
 	  /* no successor, lock is free now */
 	  return;
 	}
-  
+
       /* wait for successor */
       ptw32_mcs_flag_wait(&node->nextFlag);
       next = (ptw32_mcs_local_node_t *)
@@ -228,9 +228,9 @@ ptw32_mcs_lock_release (ptw32_mcs_local_node_t * node)
   * ptw32_mcs_lock_try_acquire
  */
 #if defined(PTW32_BUILD_INLINED)
-INLINE 
+INLINE
 #endif /* PTW32_BUILD_INLINED */
-int 
+int
 ptw32_mcs_lock_try_acquire (ptw32_mcs_lock_t * lock, ptw32_mcs_local_node_t * node)
 {
   node->lock = lock;
@@ -256,9 +256,9 @@ ptw32_mcs_lock_try_acquire (ptw32_mcs_lock_t * lock, ptw32_mcs_local_node_t * no
  * Should only be called by the thread that has the lock.
  */
 #if defined(PTW32_BUILD_INLINED)
-INLINE 
+INLINE
 #endif /* PTW32_BUILD_INLINED */
-void 
+void
 ptw32_mcs_node_transfer (ptw32_mcs_local_node_t * new_node, ptw32_mcs_local_node_t * old_node)
 {
   new_node->lock = old_node->lock;
@@ -274,7 +274,7 @@ ptw32_mcs_node_transfer (ptw32_mcs_local_node_t * new_node, ptw32_mcs_local_node
       /*
        * A successor has queued after us, so wait for them to link to us
        */
-      while (old_node->next == 0)
+      while (0 == old_node->next)
         {
           sched_yield();
         }
