@@ -19,17 +19,17 @@
  *      code distribution. The list can also be seen at the
  *      following World Wide Web location:
  *      http://sources.redhat.com/pthreads-win32/contributors.html
- * 
+ *
  *      This library is free software; you can redistribute it and/or
  *      modify it under the terms of the GNU Lesser General Public
  *      License as published by the Free Software Foundation; either
  *      version 2 of the License, or (at your option) any later version.
- * 
+ *
  *      This library is distributed in the hope that it will be useful,
  *      but WITHOUT ANY WARRANTY; without even the implied warranty of
  *      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  *      Lesser General Public License for more details.
- * 
+ *
  *      You should have received a copy of the GNU Lesser General Public
  *      License along with this library in the file COPYING.LIB;
  *      if not, write to the Free Software Foundation, Inc.,
@@ -42,9 +42,6 @@
 
 #include "pthread.h"
 #include "implement.h"
-
-
-#if defined(NEED_FTIME)
 
 /*
  * time between jan 1, 1601 and jan 1, 1970 in units of 100 nanoseconds
@@ -84,5 +81,3 @@ ptw32_filetime_to_timespec (const FILETIME * ft, struct timespec *ts)
     (int) ((*(int64_t *) ft - PTW32_TIMESPEC_TO_FILETIME_OFFSET -
 	    ((int64_t) ts->tv_sec * (int64_t) 10000000)) * 100);
 }
-
-#endif /* NEED_FTIME */
