@@ -16,17 +16,17 @@
  *      code distribution. The list can also be seen at the
  *      following World Wide Web location:
  *      http://sources.redhat.com/pthreads-win32/contributors.html
- * 
+ *
  *      This library is free software; you can redistribute it and/or
  *      modify it under the terms of the GNU Lesser General Public
  *      License as published by the Free Software Foundation; either
  *      version 2 of the License, or (at your option) any later version.
- * 
+ *
  *      This library is distributed in the hope that it will be useful,
  *      but WITHOUT ANY WARRANTY; without even the implied warranty of
  *      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  *      Lesser General Public License for more details.
- * 
+ *
  *      You should have received a copy of the GNU Lesser General Public
  *      License along with this library in the file COPYING.LIB;
  *      if not, write to the Free Software Foundation, Inc.,
@@ -36,7 +36,7 @@
  *
  * Test Synopsis: Verify sem_getvalue returns the correct number of waiters
  * after threads are cancelled.
- * - 
+ * -
  *
  * Test Method (Validation or Falsification):
  * - Validation
@@ -45,7 +45,7 @@
  * - sem_timedwait cancellation.
  *
  * Features Tested:
- * - 
+ * -
  *
  * Cases Tested:
  * -
@@ -74,8 +74,11 @@
  */
 
 #include "test.h"
+#include "../ptw32_timespec.c"
 
 #define MAX_COUNT 100
+
+const int64_t NANOSEC_PER_SEC = 1000000000;
 
 sem_t s;
 
@@ -87,44 +90,112 @@ thr (void * arg)
 }
 
 int
-main()
+timeoutwithnanos(sem_t sem, int nanoseconds)
 {
-	int value = 0;
-	int i;
-	pthread_t t[MAX_COUNT+1];
+  struct timespec ts;
+  FILETIME ft_before, ft_after;
+  int rc;
 
-	assert(sem_init(&s, PTHREAD_PROCESS_PRIVATE, 0) == 0);
-	assert(sem_getvalue(&s, &value) == 0);
-	assert(value == 0);
+  GetSystemTimeAsFileTime(&ft_before);
+  ptw32_filetime_to_timespec(&ft_before, &ts);
+  ts.tv_nsec += nanoseconds;
+  if (ts.tv_nsec >= NANOSEC_PER_SEC)
+    {
+      ts.tv_sec += 1;
+      ts.tv_nsec -= NANOSEC_PER_SEC;
+    }
 
-	for (i = 1; i <= MAX_COUNT; i++)
-		{
-			assert(pthread_create(&t[i], NULL, thr, NULL) == 0);
-			do {
-			  sched_yield();
-			  assert(sem_getvalue(&s, &value) == 0);
-			} while (value != -i);
-			assert(-value == i);
-		}
+  rc = sem_timedwait(&sem, &ts);
 
-	assert(sem_getvalue(&s, &value) == 0);
-	assert(-value == MAX_COUNT);
-	assert(pthread_cancel(t[50]) == 0);
-	assert(pthread_join(t[50], NULL) == 0);
-	assert(sem_getvalue(&s, &value) == 0);
-	assert(-value == MAX_COUNT - 1);
+  /* This should have timed out */
+  assert(rc != 0);
+  assert(errno == ETIMEDOUT);
+  GetSystemTimeAsFileTime(&ft_after);
+  // We specified a non-zero wait. Time must advance.
+  if (ft_before.dwLowDateTime == ft_after.dwLowDateTime && ft_before.dwHighDateTime == ft_after.dwHighDateTime)
+    {
+      printf("nanoseconds: %d, rc: %d, errno: %d. before filetime: %d, %d; after filetime: %d, %d\n",
+          nanoseconds, rc, errno,
+          (int)ft_before.dwLowDateTime, (int)ft_before.dwHighDateTime,
+          (int)ft_after.dwLowDateTime, (int)ft_after.dwHighDateTime);
+      assert("time must advance during sem_timedwait." == NULL);
+      return 1;
+    }
+  return 0;
+}
 
-	for (i = MAX_COUNT - 2; i >= 0; i--)
-		{
-			assert(sem_post(&s) == 0);
-			assert(sem_getvalue(&s, &value) == 0);
-			assert(-value == i);
-		}
+int
+testtimeout()
+{
+  int rc = 0;
+  sem_t s2;
+  int value = 0;
+  assert(sem_init(&s2, PTHREAD_PROCESS_PRIVATE, 0) == 0);
+  assert(sem_getvalue(&s2, &value) == 0);
+  assert(value == 0);
 
-        for (i = 1; i <= MAX_COUNT; i++)
-          if (i != 50)
-            assert(pthread_join(t[i], NULL) == 0);
+  rc += timeoutwithnanos(s2, 1000);        // 1 microsecond
+  rc += timeoutwithnanos(s2, 10 * 1000);   // 10 microseconds
+  rc += timeoutwithnanos(s2, 100 * 1000);  // 100 microseconds
+  rc += timeoutwithnanos(s2, 1000 * 1000); // 1 millisecond
+
+  return rc;
+}
+
+int
+testmainstuff()
+{
+  int value = 0;
+  int i;
+  pthread_t t[MAX_COUNT+1];
+
+  assert(sem_init(&s, PTHREAD_PROCESS_PRIVATE, 0) == 0);
+  assert(sem_getvalue(&s, &value) == 0);
+  assert(value == 0);
+
+  for (i = 1; i <= MAX_COUNT; i++)
+    {
+      assert(pthread_create(&t[i], NULL, thr, NULL) == 0);
+      do {
+          sched_yield();
+          assert(sem_getvalue(&s, &value) == 0);
+      } while (value != -i);
+      assert(-value == i);
+    }
+
+  assert(sem_getvalue(&s, &value) == 0);
+  assert(-value == MAX_COUNT);
+  assert(pthread_cancel(t[50]) == 0);
+  assert(pthread_join(t[50], NULL) == 0);
+  assert(sem_getvalue(&s, &value) == 0);
+  assert(-value == MAX_COUNT - 1);
+
+  for (i = MAX_COUNT - 2; i >= 0; i--)
+    {
+      assert(sem_post(&s) == 0);
+      assert(sem_getvalue(&s, &value) == 0);
+      assert(-value == i);
+    }
+
+  for (i = 1; i <= MAX_COUNT; i++)
+    {
+      if (i != 50)
+        {
+          assert(pthread_join(t[i], NULL) == 0);
+        }
+    }
 
   return 0;
+}
+
+int
+main()
+{
+  int rc = 0;
+
+  rc += testmainstuff();
+  rc += testtimeout();
+
+  return rc;
 }
 
